--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,14 +3,15 @@
     package="com.brunogcpinheiro.igrejadaunidade">
 
     <uses-permission android:name="android.permission.INTERNET" />
-    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+
     <application
+        android:name=".CustomApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme"
-        android:name=".CustomApplication">
+        android:theme="@style/AppTheme">
         <activity android:name=".MainActivity" />
         <activity android:name=".IntroActivity">
             <intent-filter>
@@ -24,7 +25,9 @@
         <activity android:name=".CelulaActivity" />
         <activity android:name=".OracaoActivity" />
         <activity android:name=".OracaoPostActivity" />
-        <activity android:name=".OfertaActivity"/>
+        <activity android:name=".OfertaActivity" />
+        <activity android:name=".VideoActivity" />
+        <activity android:name=".VideoDetailActivity"></activity>
     </application>
 
 </manifest>
